# aeron

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
aeron/: Cargo.toml
aeron-client-sys/: Cargo.toml  build.rs  wrapper.h
aeron-examples/: Cargo.toml
aeron/src/: client.rs  context.rs  error.rs  lib.rs  publication.rs  subscription.rs
examples/: Cargo.toml
