[package]
name = "aeron-examples"
version = "0.0.0"
edition = "2021"

[dependencies]
aeron = { path = "../aeron" }
color-eyre = "0.6"
tokio = { version = "1", features = ["full"] }
tikv-jemallocator = { version = "0.5", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms"] }
